@@ -1,33 +1,30 @@
 package session.nine.mathlist;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class MainTest {
     public static void main(String[] args) {
 
-        List<Integer> numbers = List.of(
-                1, 2, 3, 5,
-                6, 7, 8, 9, 10, 11, 12,
-                13, 14, 15, 16, 17, 18,
-                19, 20, 21, 22, 23, 24);
-        List<Integer> otherNumbers = List.of(1, 1, 1, 2, 3, 4);
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
 
-        System.out.println(MathematicCollection.fats(numbers));
-        System.out.println(MathematicCollection.extractEvens(numbers));
-        System.out.println(MathematicCollection.extractOdds(numbers));
-        System.out.println(MathematicCollection.noRepeatList(otherNumbers));
+        List<Double> fats = MathematicList.fats(numbers);
+        double sum = MathematicList.sum(numbers);
+        double sumMany = MathematicList.sumMany(Arrays.asList(numbers, numbers));
 
-        List<Double> noRepeatNumbersList = MathematicCollection.noRepeatList(otherNumbers);
+        System.out.println(fats);
+        System.out.println(sum);
+        System.out.println(sumMany);
 
-        System.out.println(MathematicCollection.sum(noRepeatNumbersList));
-        System.out.println(MathematicCollection.sum(otherNumbers));
-        System.out.println(MathematicCollection.average(List.of(10, 8, 10, 10)));
+        System.out.println(sum + sumMany);
 
-        System.out.println(MathematicCollection.toBinaryList(numbers));
+        numbers = Arrays.asList(1, 2, 3, 1);
+        System.out.println(MathematicList.sumDistinct(numbers));
+        System.out.println(MathematicList.sumManyDistinct(Arrays.asList(numbers, List.of(10, 11, 11))));
 
-        System.out.println(MathematicCollection.max(List.of(1, 2, 3, 11, 200)));
-        System.out.println(MathematicCollection.min(List.of(1, 2, 3, 11, 200)));
-        System.out.println(MathematicCollection.sumDoubleLists(List.of(200, 500), List.of(11, 200)));
-        System.out.println(MathematicCollection.averageDoubleLists(List.of(200, 500), List.of(11, 200)));
+        numbers = Arrays.asList(10, 10, 10); // 10
+        var otherStudent = Arrays.asList(10, 10, 9, 9); // 9,5
+
+        System.out.println(MathematicList.averageDoubleLists(numbers, otherStudent));
     }
 }
